# serial_master

./: .gitignore  ARCHITECTURE.md  Cargo.toml  DEVELOPMENT_PLAN.md  LICENSE  README.md  README_EN.md  TASK_BACKLOG.md  USER_GUIDE.md  check_output.txt  com0com和hub4com使用说明.md  commands.md  commands.txt  package-lock.json  safe_run.ps1  serial_commands.json  serial_commands.yaml  task.md  text.txt
.claude/: settings.local.json
docs/: ARCHITECTURE.md  AUTOSCROLL_DESIGN.md  PORT_SHARING_DESIGN.md  PORT_SHARING_SUMMARY.md  SCRIPTING_GUIDE.md  SECURITY_ANALYSIS_REPORT.md  SOFTWARE_ARCHITECTURE.md  USER_GUIDE.md  binary_size_breakdown.md  external_pipe_guide.md  implementation_plan_phase2.md  implementation_plan_port_sharing.md  implementation_plan_regex_filter.md  implementation_plan_rx_hook.md  implementation_plan_script_config_refactor.md  implementation_plan_script_persistence.md  implementation_plan_search_filter.md  optimization_plan.md  refactor_scripting_walkthrough.md  refine_header_layout_plan.md  refine_header_layout_walkthrough.md  walkthrough_performance_optimization.md  walkthrough_phase2.md  walkthrough_port_sharing.md  walkthrough_regex_filter.md  walkthrough_script_config_refactor.md  walkthrough_search_filter.md  端口共享提权方案.md
docs/technical_debt/: word_wrap_failure.md
scripts/: bidirectional_test_com9.py  flood_com9.py  verify_scripting.py
src/core/: admin_service.rs  com0com_manager.rs  hub4com_manager.rs  ipc.rs  mod.rs  port_sharing_manager.rs  serial_manager.rs
src/tauri/: Cargo.toml  compile_error.txt  output.txt  tauri.conf.json
src/tauri/capabilities/: default.json
src/tauri/icons/: icon.icns
src/tauri/src/: commands.rs  lib.rs  main.rs  scripting.rs
src/ui/: build_output.txt  package-lock.json  package.json  tailwind.config.cjs  tsconfig.app.json
src/ui/src/: App.tsx  (+1 more)
tests/: diagnose_com0com.rs  serial_loopback.rs  test_pipe.py  verify_routing.py  virtual_port_test.rs
(+26 files in other folders)
