[package]
name = "serial_master"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["src/tauri"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serialport = "4.0"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
which = "4.0"
serde_json = "1.0.149"
chrono = "0.4.43"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_System_Threading"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
